# facturacion-servicios-afip

./: .gitignore  README.md  pyproject.toml
facturacion_servicios/: afip_enums.py  bill.html  billing_info.json.template  create_pdf.py  credentials.json.template  invoice.html  invoice_template.html  main.py  voucher.py
